# pole

./: .gitignore  CMakeLists.txt  Makefile  MapiMessage.cpp  MapiMessage.hpp  StreamPropertyReader.cpp  StreamPropertyReader.hpp  StreamReader.cpp  StreamReader.hpp  makeTagTable  mapiExtraDefs.h  mapiUtils.cpp  mapiUtils.hpp  mapidefs.h  mapitagnames.cpp  mapitagnames.h  ms-oxprops.h  msginfo.cpp  oxprops.py  pole.cpp  pole.h
MsgInfo.xcodeproj/: project.pbxproj
MsgInfo.xcodeproj/xcshareddata/xcschemes/: MsgInfo.xcscheme
XCode/MsgInfo/MsgInfo.xcodeproj/: project.pbxproj
pole.xcworkspace/: contents.xcworkspacedata
poleview/: MapiMessage.cpp  MapiMessage.hpp
testfiles/: README
